# php-firepdf

./: .gitignore  CHANGELOG.md  LICENSE.md  README.TR.md  README.md  composer.json  phpstan.neon.dist  phpunit.xml.dist
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: native-build.yml  native-bundles.yml
config/: php-firepdf.php
native/lib/: README.md
native/pdf-inspector-ffi/: Cargo.toml
native/pdf-inspector-ffi/src/: lib.rs
resources/lang/en/: validation.php
scripts/: stage-native-bundle.sh  test-user-pdfs.php
src/: FirePdf.php  FirePdfServiceProvider.php
src/Ai/Tools/: AbstractFirePdfTool.php  ClassifyPdfTool.php  DetectPdfTool.php  ExtractPagesMarkdownTool.php  ExtractTextTool.php  PdfToolInputResolver.php  ProcessPdfTool.php  (+1 more)
src/DTOs/: PageMarkdown.php  PageRegionTexts.php  PagesExtractionResult.php  PdfClassification.php  PdfResult.php  RegionText.php  TextItem.php
src/Exceptions/: FFINotAvailableException.php  FirePdfException.php  InvalidInputException.php  NativeLibraryNotFoundException.php  ProcessingException.php
src/FFI/: Inspector.php
src/Facades/: FirePdf.php
src/Rules/: ValidPdf.php
src/Runtime/: FirePdfRuntimeOptions.php  FirePdfRuntimeSnapshot.php
src/Support/: ArrayValue.php
src/Validation/: PdfUploadValidator.php
tests/: Pest.php  TestCase.php
tests/Feature/: AiToolInputResolverTest.php  AiToolsTest.php  LaravelBindingTest.php  NativeIntegrationTest.php  PdfValidationRuleTest.php  RuntimeTelemetryIntegrationTest.php
tests/Unit/: DtoTest.php  FirePdfTest.php  RuntimeOptionsTest.php
