[package]
name = "pdf-inspector-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "pdf_inspector_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
pdf-inspector = { git = "https://github.com/firecrawl/pdf-inspector", rev = "2876fa4b3ea9cf4ca06f4877b9aaf3ea6185e58d" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
